#29 create cdn and serve s3 bucket from cdn

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
-Hello,
-
-This is Terraform test website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Terraform Page</title>
+</head>
+<body>
+    <h1>Terraform camp</h1>
+</body>
+</html>
