#33 invalidate cloudfront stack when content version changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>My Terraform Page</title>
 </head>
 <body>
-    <h1>Welcome Terraform camp Hurray!!!</h1>
+    <h1>Welcome, Terraform camp Hurray!!!</h1>
 </body>
 </html>
