#35 Uploading assets for_each

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Terraform Page</title>
+    <title>Arcanum</title>
 </head>
 <body>
-    <h1>Welcome, Terraform camp Hurray!!!</h1>
+    <h1>How do you get started playing Arcanum</h1>
+    <img src="/assets/Arcanum.jpg"./>
+    <img src="/assets/screenshots.png"./>
 </body>
 </html>
