#44 test our terra home on terratowns test town

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>How do you get started playing Arcanum</h1>
-    <img src="/assets/Arcanum.jpg"./>
-    <img src="/assets/screenshots.png"./>
+    <img src="./assets/Arcanum.jpg"./>
+    <img src="./assets/screenshots.png"./>
 </body>
 </html>
